--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -55,7 +55,7 @@
 			<!--  1 - Unified Data Hub Menu   -->
 			<li id="nav_analytics_hub" style="display: none;" data-system-user-roles="0,2,4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#analytics_hub_menu"> <i class="fa fa-fw fa-pie-chart"></i>
-				 	Unified Data Report <i id="data_analytics_hub_collapse_icon" class="fa fa-fw fa-caret-down"> </i>
+				 	Unified Reports <i id="data_analytics_hub_collapse_icon" class="fa fa-fw fa-caret-down"> </i>
 				</a>
 				<ul id="analytics_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Customer_Data_Report_Menu" >
@@ -84,7 +84,7 @@
 			<!--  2 - Data Journey Hub   -->
 			<li id="nav_journey_hub"  >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#journey_hub_menu"> <i class="fa fa-fw fa-map"></i>
-				 	Data Journey Hub <i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+				 	Data Journey <i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">			
 					<li style="display: none;" data-system-user-roles="5">
@@ -103,7 +103,7 @@
 			<!--  3 - Customer Data Hub Menu  -->
 			<li id="nav_customer_hub" style="display: none;" data-system-user-roles="1,2,3,4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#customer_hub_menu"> <i class="fa fa-fw fa-address-card-o"></i>
-					Customer Data Hub <i id="customer_data_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					Customer Data Hub<i id="customer_data_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Community_Management_Menu" style="display: none">
@@ -127,7 +127,7 @@
 			<!-- 4 - Data Activation Hub Menu -->
 			<li id="nav_activation_hub" style="display: none;" data-system-user-roles="4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#data_activation_hub_menu"> <i class="fa fa-fw fa-line-chart"></i>
-					Data Activation Hub <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					Activation Hub <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Automated_Campaigns_Menu" >
@@ -156,7 +156,7 @@
 			<!--  5 - Core System Management  -->
 			<li id="nav_system_management" style="display: none;" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#system_management_menu"> <i class="fa fa-cogs" aria-hidden="true"></i>
-					System Management <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					System Admin <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="system_management_menu" class="collapse in" aria-expanded="true">
 					<li>
