--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -124,7 +124,7 @@
 	       	<li id="segment_data_synchronization" >
 				<a href="javascript:" data-target-tab="panel_segment_synchronization" title="Data Synchronization" > <i class="fa fa-exchange" aria-hidden="true"></i> Synchronization </a>
 	       	</li>
-	       	<li id="segment_data_personalization" style="display: none;" >
+	       	<li id="segment_data_personalization"  >
 				<a href="javascript:handleSegmentPersonalizationTabs()" data-target-tab="panel_segment_data_personalization" title="Data Personalization" > <i class="fa fa-smile-o" aria-hidden="true"></i> Personalization </a>
 	       	</li>
 	       	<li id="segment_campaigns"  style="display: none;" >
@@ -262,13 +262,13 @@
 				
 				<div class="form-group" >
 
-					 <div class="col-lg-12 sm_purpose" style="display: none"> 
+					 <div class="col-lg-12 sm_purpose" > 
 					 	<div class="col-sm-2" >
 					 		<label class="highlight_text"> Export Type </label> <br>
 					 	</div>
 						<div class="col-sm-10" style="font-size: 16px;padding-top: 5px;" id="segment_export_types" >
 							<span >
-		                        <label><input type="radio" name="segment_export_type" value="CSV_FILE"> CSV FILE </label>
+		                        <label><input type="radio" name="segment_export_type" value="CSV_FILE" checked="checked"> CSV FILE </label>
 		                    </span>
 							<span style="margin-left: 20px" >
 		                        <label ><input type="radio" name="segment_export_type" value="GOOGLE_SHEET"> GOOGLE SHEET </label>
