remove Google Sheet exporting

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -270,7 +270,7 @@
 							<span >
 		                        <label><input type="radio" name="segment_export_type" value="CSV_FILE" checked="checked"> CSV FILE </label>
 		                    </span>
-							<span style="margin-left: 20px" >
+							<span style="margin-left: 20px; display: none" >
 		                        <label ><input type="radio" name="segment_export_type" value="GOOGLE_SHEET"> GOOGLE SHEET </label>
 		                    </span>
 	                    </div>
