--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -277,7 +277,7 @@
 		                        <label><input type="radio" name="segment_export_type" value="CSV_FILE" > CSV FILE </label>
 		                    </span>
 							<span style="margin-left: 20px; display: block;" >
-		                        <label ><input type="radio" name="segment_export_type" value="GOOGLE_SHEET" checked="checked"> GOOGLE SHEET </label>
+		                        <label ><input type="radio" name="segment_export_type" value="GOOGLE_SHEETS" checked="checked"> GOOGLE SHEETS </label>
 		                    </span>
 	                    </div>
 	                    
