add Custom Query Filter in Segment UI and Backend

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -188,8 +188,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/addon/hint/show-hint.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/addon/hint/html-hint.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/addon/hint/xml-hint.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- Ext JS for CodeMirror -->
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.yaml.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.formatting.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.aql.js?_={{cacheBustingKey}}"></script>
 	
 	<!-- jsGrid -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
