fix bugs Custom Query Filter in segment

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -264,7 +264,7 @@
 			         	</li>
          
          				<li>
-          					<a href="javascript:initSegmentCustomQueryFilter()" data-target-tab="panel_segment_custom_query" title="Segment Custom Query Editor" >
+          					<a href="javascript: handleSegmentCustomQueryFilter(false)" data-target-tab="panel_segment_custom_query" title="Segment Custom Query Editor" >
           						 <i class="fa fa-info-circle" aria-hidden="true"></i> Custom Query Filter
           					</a>
          				</li>
