update & improve system

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -284,7 +284,8 @@
 								<i class="fa fa-object-group" aria-hidden="true"></i> Query with LEO AI
 			       			</button>
 			       			<label class="control-label" for="segment_custom_aql_editor" style="margin-bottom: 8px;"> 
-			       				<mark> ArangoDB Query Editor </mark>  (You are an AQL expert. You know what you are doing)
+			       				<mark> ArangoDB Query Editor </mark>  (You are an AQL expert. You know what you are doing) <br>
+			       				<p> Disallow 'update', 'remove', 'insert', or 'replace' or 'cdp_profile' keywords </p>
 			       			</label>
 			       			<div  id="segment_custom_query_holder" style="width: 98%; border-left: 1px dotted;">
 			       				<textarea id="segment_custom_aql_editor"  ></textarea>
