--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -253,8 +253,9 @@
 						<hr>
 						<div id="segment_custom_query_holder" > 
 							<label class="control-label" for="segment_custom_aql_editor" style="margin-bottom: 8px;"> 
-			       				<mark> ArangoDB Query Editor </mark>  (You are an AQL expert. You know what you are doing)
+			       				<mark> ArangoDB Query Editor </mark>  
 			       			</label>
+			       			<p class="small"> Your custom query in the segment </p>
 			       			<div  style="width: 98%; border-left: 1px dotted;">
 			       				<textarea id="segment_custom_aql_editor"  ></textarea>
 			       			</div>
