fix missing UTM data when scan QR code

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -315,7 +315,7 @@
 								</div>
 								<!-- bottom -->
 								<div style="text-align: center; margin: auto;">
-									<div id="profile_activitiy_flow_done" style="display: none;"> <h3 style="text-align: center;"> All data is loaded !</h3> </div>
+									<div id="profile_activitiy_flow_done" style="display: none;"> <h3 style="text-align: center;"> All data is loaded </h3> </div>
 									<button id="btn_loadMoreEvents" type="button" class="btn btn-do-now" onclick="loadMoreEventsInProfile()" style="margin-top: 20px" > 
 						     			<i class="fa fa-refresh" aria-hidden="true"></i> Load more
 						     		</button>
