--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -265,7 +265,6 @@
 				</div>
 			</div>
 			
-			
 			<!-- tab 4 Data Exporting  -->
 			<div class="tab-pane" id="panel_segment_data_exporting" >
 				<div class="form-group highlight_box" >
@@ -331,7 +330,8 @@
 							</button>
 							<div class="download_link_holder" >
 								<a id="ahref_exported_excel_csv" class="btn btn-do-now" style="display: none;" target="_blank" > <i class="fa fa-cloud-download" aria-hidden="true"></i> 
-									Click to download </a>
+									Click to download 
+								</a>
 							</div>
 						</div>
 					</div>
