fix bugs UI admin

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -107,7 +107,7 @@
 				</a>
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Community_Management_Menu" style="display: none">
-						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
+						<a id="Community_Management" href="#calljs-leoCdpRouter('Community_Management')" 
 							title="All Customer Communities" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer communities" > 
 							<i class="fa fa-fw fa-users"></i> Customer Communities </a>
 					</li>
