add login for demo

--- a/resources/app-templates/leocdp-admin/login.html
+++ b/resources/app-templates/leocdp-admin/login.html
@@ -49,4 +49,13 @@
 
 <script>
 	initSystemUserLogin();
+	
+	// set the demo account for dcdp.bigdatavietnam.org
+	setTimeout(function(){
+		if (location.host === 'dcdp.bigdatavietnam.org') { 
+			$('#username').val('demo');  $('#password').val('demo');   
+		}	
+	},1000)
+	
+
 </script>
