fix wrong pass for demo

--- a/resources/app-templates/leocdp-admin/login.html
+++ b/resources/app-templates/leocdp-admin/login.html
@@ -53,7 +53,8 @@
 	// set the demo account for dcdp.bigdatavietnam.org
 	setTimeout(function(){
 		if (location.host === 'dcdp.bigdatavietnam.org') { 
-			$('#username').val('demo');  $('#password').val('demo');   
+			$('#username').val('demo');  
+			$('#password').val('123456');   
 		}	
 	},1000)
 	
